--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=FrimilCalculator
+
+spring.datasource.url=jdbc:mysql://localhost:3306/frimil?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Peixo12@
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
