--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=FrimilCalculator
+server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/frimil?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
